# finirig

./: .cursorrules  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_INSTRUCTIONS.md  setup.sh
.cache/clangd/index/: AlternateSet.hh.BF5035E30D8EDC26.idx  AlternateSubst.hh.3AE1A40783D1B098.idx  AlternateSubstFormat1.hh.CA82513F6414287C.idx  AmpModel.cpp.5FC19C4FC2776A05.idx  AmpModel.h.AFE704521EE370CA.idx  Anchor.hh.044C46A84D926807.idx  AnchorFormat1.hh.BDA5A5293398DE87.idx  AnchorFormat2.hh.964B23D3D8DB931D.idx  AnchorFormat3.hh.4A6385D5FBCA0599.idx  AnchorMatrix.hh.567C358236938D9B.idx  AudioControlsWidget.cpp.52886BA098944ECE.idx  AudioControlsWidget.h.BA44B97CFFFA6CEF.idx  AudioEngine.cpp.CBBBA7D77369E256.idx  AudioEngine.h.CC8556F54EDB5D34.idx  AudioProcessor.cpp.91A3F96F690D3424.idx  AudioProcessor.h.3600E86A57AAE6F1.idx  BidiChain.c.EEE4799F5FF04D05.idx  BidiChain.h.44F5A0695986D89A.idx  BidiTypeLookup.c.9ADCB20A74EEC9BB.idx  BidiTypeLookup.h.8048FDA2C67D62E9.idx  BracketQueue.c.9826DB8F9BEBD720.idx  BracketQueue.h.506DC7C78A12B619.idx  BracketType.h.2E07FC5ED6B8096D.idx  CBDT.hh.43A47F199ED27E44.idx  COLR.hh.880879F391F75A8A.idx  CPAL.hh.CE2111B474CEBEC4.idx  ChainContextPos.hh.E25F10ECA4FB8FF1.idx  ChainContextSubst.hh.27D6228CF49ED87B.idx  Common.hh.549AE7907D2216CC.idx  Common.hh.6D71DAC4DF81B4A9.idx  CompositeGlyph.hh.00D5E0547AD80AB1.idx  ContextPos.hh.928822FF3FFE0592.idx  ContextSubst.hh.5DC2D997361F9AC4.idx  Coverage.hh.CF756C46A211D94B.idx  CoverageFormat1.hh.498B11360002D5BD.idx  CoverageFormat2.hh.62A680664D180938.idx  CursivePos.hh.F8BE0953AD0DEE44.idx  CursivePosFormat1.hh.01E2E13ABCFBF2C9.idx  DeviceInfoWidget.cpp.B2633B8EBB0B97BE.idx  DeviceInfoWidget.h.73EB96C3A0FC0EE1.idx  (+1617 more)
.github/workflows/: README.md  ci.yml  release.yml
docs/: BUILD.md  CI_CD.md  ICON_SETUP.md  PROJECT_STRUCTURE.md  README.md  RELEASES.md  SETUP_CI_CD.md  VSCODE_SETUP.md
include/finirig/amps/: AmpModel.h
include/finirig/audio/: AudioEngine.h  AudioProcessor.h
include/finirig/pedals/: OverdrivePedal.h  PedalBase.h
include/finirig/ui/: AudioControlsWidget.h  DeviceInfoWidget.h  LevelMeterWidget.h  MainWindow.h
resources/: Finirig.icns  Info.plist  finirig.desktop
scripts/: bump_version.sh  create_release.sh  find_qt6.sh  generate_icons.sh  get_version.sh  parse_version.sh
src/: main.cpp
src/amps/: AmpModel.cpp
src/audio/: AudioEngine.cpp  AudioProcessor.cpp
src/pedals/: OverdrivePedal.cpp  PedalBase.cpp
src/ui/: AudioControlsWidget.cpp  DeviceInfoWidget.cpp  LevelMeterWidget.cpp  MainWindow.cpp
tests/: test_main.cpp
tests/amps/: test_amp_model.cpp
tests/audio/: test_audio_processor.cpp
tests/pedals/: test_overdrive_pedal.cpp  test_pedal_base.cpp
